update styles to remove duplication and adjust style

--- a/src/app/shared/components/select-input/select-input.component.html
+++ b/src/app/shared/components/select-input/select-input.component.html
@@ -4,7 +4,7 @@
                 <label [id]="id" class="form-label small">{{label}}</label>
     </div>
     <div    [ngClass]="vertCLass ? vertCLass : 'col-12 col-md-8 col-xxl-9'" >
-        <select class="form-select" [id]="id" [name]="id" (change)="onSelectionChange($event)">
+        <select class="form-select form-select-sm" [id]="id" [name]="id" (change)="onSelectionChange($event)">
             <option [value]="noOption">{{noOption}}</option>
             <option  *ngFor="let option of options" [value]="option[value]">{{option[prop]}}</option>
           </select>
