--- a/src/app/shared/components/keypad/keypad.component.html
+++ b/src/app/shared/components/keypad/keypad.component.html
@@ -1,4 +1,4 @@
-<div class="row g-2">
+<div class="row g-1 keypad">
   <div class="col-12" *ngFor="let row of keypad">
         <div class="row g-2">
           <div class="col flex-grow-1" *ngFor="let key of row">
