--- a/src/app/shared/components/select-input/select-input.component.html
+++ b/src/app/shared/components/select-input/select-input.component.html
@@ -5,8 +5,11 @@
     </div>
     <div    [ngClass]="vertCLass ? vertCLass : 'col-12 col-md-8 col-xxl-9'" >
         <select class="form-select form-select-sm" [id]="id" [name]="id" (change)="onSelectionChange($event)">
-            <option [value]="noOption">{{noOption}}</option>
-            <option  *ngFor="let option of options" [value]="option[value]">{{option[prop]}}</option>
+            <option [value]="noOption" selected>{{noOption}}</option>
+            <option  *ngFor="let option of options"
+            [value]="option[value]"
+            [selected]="selected && option[value] === selected[value]">
+            {{option[prop]}}</option>
           </select>
     </div>
   </div>
