--- a/src/app/features/orders/shared/summary/summary.component.html
+++ b/src/app/features/orders/shared/summary/summary.component.html
@@ -1,34 +1,34 @@
 <div class="summary border-top py-3">
 <h6 class="text-decoration-underline mb-3">Order Summary</h6>
 <div class="container-fluid px-0">
-  <div class="row  g-3">
+  <div class="row  gx-3 gy-2">
      <div class="col-12 col-md-6 col-lg-12 col-xl-6">
       <div class="row">
         <div class="col-6 text-start">
-          <span>Net Total :</span>
+          <span class="small">Net Total :</span>
         </div>
         <div class="col-6 text-end">
-            <span>{{netTotal()}} SAR</span>
+            <span class="small">{{netTotal()}} {{currency}}</span>
         </div>
       </div>
     </div>
      <div class="col-12 col-md-6 col-lg-12 col-xl-6">
       <div class="row ">
         <div class="col-8 text-start ">
-          <span class="ps-md-3 ps-lg-0 ps-xl-3 net-total-border">Net Total + Tax  :</span>
+          <span class="ps-md-3 ps-lg-0 ps-xl-3 net-total-border small">Net Total + Tax  :</span>
         </div>
         <div class="col-4 text-end">
-            <span>{{netTotal() + tax()}} SAR</span>
+            <span class="small">{{netTotal() + tax()}} {{currency}}</span>
         </div>
       </div>
     </div>
      <div class="col-12">
       <div class="row">
         <div class="col-6 text-start">
-          <span>Gross Total :</span>
+          <span class="small">Gross Total :</span>
         </div>
         <div class="col-6 text-end">
-            <span>{{grossTotal()}} SAR</span>
+            <span class="small">{{grossTotal()}} {{currency}}</span>
         </div>
       </div>
     </div>
