--- a/src/app/shared/components/navitem/navitem.component.html
+++ b/src/app/shared/components/navitem/navitem.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <ng-template #content>
   <ng-content></ng-content>
   <span class="ps-2 fw-light small" [class.d-none]="isCollapsed">
@@ -24,4 +24,42 @@
        [title]="navItemName" #shopping>
     <ng-container *ngTemplateOutlet="content"></ng-container>
   </div>
+</ng-template> -->
+
+<ng-template #content>
+  <ng-content></ng-content>
+  <span class="ps-2 fw-light small" [class.d-none]="isCollapsed">
+    {{ navItemName.split('_').join(' ') }}
+  </span>
 </ng-template>
+
+<ng-container *ngIf="navItemName === 'Shopping'">
+  <div class="d-flex align-items-center rounded rounded-4 hover-bg"
+       [ngClass]="classes"
+       [class.justify-content-center]="isCollapsed"
+       [title]="navItemName"
+       #shopping>
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </div>
+</ng-container>
+
+<ng-container *ngIf="['Hold_Orders', 'Return_Order', 'End_Day'].includes(navItemName)">
+  <div class="d-flex align-items-center rounded px-3 mb-2 rounded-4 hover-bg"
+       [ngClass]="classes"
+       [class.justify-content-center]="isCollapsed"
+       [title]="navItemName"
+       (click)="handleSpecialClick(navItemName)">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </div>
+</ng-container>
+
+<ng-container *ngIf="!['Shopping', 'Hold_Orders', 'Return_Order', 'End_Day'].includes(navItemName)">
+  <div class="d-flex align-items-center px-3 mb-2 rounded rounded-4 hover-bg"
+       [ngClass]="classes"
+       [class.justify-content-center]="isCollapsed"
+       [routerLink]="navItemName"
+       routerLinkActive="router-link-active"
+       [title]="navItemName">
+    <ng-container *ngTemplateOutlet="content"></ng-container>
+  </div>
+</ng-container>
