change toast  success message background

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -108,6 +108,10 @@ html {
   display: flex;
   flex-direction: column;
 }
+.toast-success {
+  background-color: $semi-dark !important;
+}
+
  .closeIcon{
   position: absolute;
   left:10px;
