--- a/src/app/features/orders/orders.component.html
+++ b/src/app/features/orders/orders.component.html
@@ -1,1 +1,28 @@
-<p>orders works!</p>
+<div class="container-fluid p-4 vh-100 overflow-auto d-flex flex-column">
+   <div class="row flex-column flex-grow-1">
+    <div class="col-12 bg-semi-dark py-2 px-3 rounded-top-3 border-bottom">
+     <app-page-controls
+        [items]="orders()"
+        [sortKey]="'status'"
+        [type]="'order'"
+        [route]="'Orders/create'"
+        (displayedItems)="handleDispalyedItems($event)"
+         (deleteEvent)="handleDelete($event)">
+    </app-page-controls>
+    </div>
+      <div class="col-12  rounded-bottom-3 p-4 shadow-sm products overflow-auto d-flex flex-column"  [ngClass]="{ 'flex-grow-1': orders().length > 0 }">
+     <app-no-items
+        [header]="'Orders'"
+        (addNewVar)="addNew($event)"
+        [subTitle]="'Efficiency in every order. Excellence in every delivery.'"
+        [BtnName]="'Add New Order'"
+        *ngIf="orders().length == 0; else orderContainer">
+      </app-no-items>
+
+      <ng-template #orderContainer>
+            <ng-content #name></ng-content>
+      </ng-template>
+  </div>
+  </div>
+
+</div>
