--- a/src/app/features/orders/shared/order-details/order-details.component.html
+++ b/src/app/features/orders/shared/order-details/order-details.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid px-0">
-  <div class="row g-3">
+<div class="container-fluid px-0  overflow-auto" style="height: 100vh;">
+  <div class="row g-2" >
   <div class="col-12 col-lg flex-grow-1 py-3" style="height: 100vh;">
   <div class="d-flex flex-column section-style rounded rounded-3 px-4 py-3" style="height: 100%;">
     <div class="flex-grow-0 searchInputs border-bottom">
      <div class="position-relative w-100 searchContainer">
-      <app-input [id]="'findProductByName'" [label]="'Find By Name'"
+      <app-input [id]="'findProductByName'" [label]="'Find By Name' | translate"
       (input)="searchProductsByName($event)"     #searchInputByName>
         <!-- <i class="fa-solid fa-magnifying-glass" [class.d-none]="nameSearch"></i> -->
         <i class="fa-solid fa-magnifying-glass" ></i>
@@ -31,7 +31,7 @@
   >
 </zxing-scanner> -->
       <div class="py-3">
-        <app-input [id]="'findProductByBarcode'" [label]="'Find By Barcode'"  (input)="searchProductsByBarcode($event)" #searchInputByBarcode >
+        <app-input [id]="'findProductByBarcode'" [label]="'Find By Barcode' | translate"  (input)="searchProductsByBarcode($event)" #searchInputByBarcode >
         <!-- <i class="fa-solid fa-magnifying-glass" [class.d-none]="barcodeSearch"></i> -->
          <i class="fa-solid fa-magnifying-glass"></i>
       </app-input>
@@ -49,7 +49,7 @@
   <div class="section_2 section-style rounded rounded-3 h-100 pt-3 px-4 d-flex flex-column">
     <div class="d-flex mb-3  selectCustomerContainer flex-grow-0">
       <app-select-input
-        [label]="'Select Customer'" [id]="'customer'"
+        [label]="'Select Customer' | translate" [id]="'customer'"
         [options]="customers" (selectedOption)="selectedCustomerEvent($event)"
         [prop]="'name'" [value]="'id'" [vertCLass]="'col-12'"   [selected]="selectedCustomer"
         class="flex-grow-1">
