--- a/src/app/features/orders/shared/home-payment/home-payment.component.html
+++ b/src/app/features/orders/shared/home-payment/home-payment.component.html
@@ -2,15 +2,15 @@
 
   <div class="payment border-top border-bottom py-2" >
   <div class="d-flex align-items-center justify-content-between  mb-2">
-      <h6 class="text-decoration-underline mb-0">Payment Methods</h6>
-      <span class="fs-verySmall text-danger" [class.d-none]="mustBePaid">Total Amount must be Paid</span>
+      <h6 class="text-decoration-underline mb-0">{{'Payment Methods' | translate}}</h6>
+      <span class="fs-verySmall text-danger" [class.d-none]="mustBePaid">{{'Total Amount must be Paid' | translate}}</span>
     </div>
     <div class="container-fluid px-0">
       <div class="row border-bottom pb-2 mb-2 gy-2">
         <div class="col-12" *ngFor="let method of paymentMethods">
           <div class="row align-items-center" [id]="method.label + ' Method'">
             <div class="col-6 text-start">
-              <span class="small">{{ method.label }} :</span>
+              <span class="small">{{ method.label | translate }} :</span>
             </div>
             <div class="col-6">
                <div class="w-100">
@@ -36,19 +36,19 @@
         <div class="row gy-2">
         <div class="col-12">
           <div class="row">
-            <div class="col-6 text-start small"><span>Due Amount :</span></div>
+            <div class="col-6 text-start small"><span>{{'Due Amount' | translate}} :</span></div>
             <div class="col-6 text-end small"><span>{{calculateDueAmount()}} {{currency}}</span></div>
           </div>
         </div>
         <div class="col-12">
           <div class="row">
-            <div class="col-6 text-start small"><span>Paid :</span></div>
+            <div class="col-6 text-start small"><span>{{'Paid' | translate}} :</span></div>
             <div class="col-6 text-end small"><span>{{paidAmount()}} {{currency}}</span></div>
           </div>
         </div>
         <div class="col-12">
           <div class="row">
-            <div class="col-6 text-start small"><span>Reminder :</span></div>
+            <div class="col-6 text-start small"><span>{{'Reminder' | translate}} :</span></div>
             <div class="col-6 text-end small"><span>{{ calculateReminder() }} {{currency}}</span></div>
           </div>
         </div>
