--- a/src/app/shared/components/nav-sales-person/nav-sales-person.component.html
+++ b/src/app/shared/components/nav-sales-person/nav-sales-person.component.html
@@ -5,7 +5,7 @@
       <img [src]="'assets/images/'+personImage"   alt="sales person Image" width="40px;" height="40px" class="rounded rounded-circle ">
       <div [class.d-none]="isCollapsed" class="ps-2  flex-grow-1">
         <div class="d-flex align-item-center justify-content-between">
-           <span class="fs-verySmall">Welcome Back 👋 </span>
+           <span class="fs-verySmall">{{'Welcome Back' | translate}}👋 </span>
             <i class="fa-solid fa-chevron-right small"></i>
         </div>
          <span class="small">{{salesPersonName}}</span>
