--- a/src/app/features/orders/shared/order-products/order-products.component.html
+++ b/src/app/features/orders/shared/order-products/order-products.component.html
@@ -37,14 +37,14 @@
       <td colspan="4">{{ product.name | titlecase }}</td>
     </tr>
     <tr>
-      <td scope="row">{{ product.price }}  SAR</td>
+      <td scope="row">{{ product.price }}  {{currency | translate}}</td>
       <td >
         <div class="d-flex justify-content-center">
             <app-quantity-control [quantity]="product.quantity" (quantityChange)="updateQuantity(index, $event)">
             </app-quantity-control>
         </div>
       </td>
-      <td class="text-center">{{ product.price * getProductQuantity(product) }} SAR</td>
+      <td class="text-center">{{ product.price * getProductQuantity(product) }} {{currency | translate}}</td>
       <td class="text-end" (click)="removeProduct(index)">
         <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 23 22" fill="none">
           <path d="M15.9444 5V4.2C15.9444 3.0799 15.9444 2.51984 15.7022 2.09202C15.4892 1.71569 15.1492 1.40973 14.7311 1.21799C14.2557 1 13.6335 1 12.3889 1H10.6111C9.36655 1 8.74427 1 8.26891 1.21799C7.85077 1.40973 7.51082 1.71569 7.29776 2.09202C7.05556 2.51984 7.05556 3.0799 7.05556 4.2V5M9.27778 10.5V15.5M13.7222 10.5V15.5M1.5 5H21.5M19.2778 5V16.2C19.2778 17.8802 19.2778 18.7202 18.9145 19.362C18.5949 19.9265 18.085 20.3854 17.4577 20.673C16.7447 21 15.8113 21 13.9444 21H9.05556C7.18871 21 6.25529 21 5.54225 20.673C4.91505 20.3854 4.40511 19.9265 4.08553 19.362C3.72222 18.7202 3.72222 17.8802 3.72222 16.2V5" stroke="#C282FA" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
