--- a/src/app/features/orders/shared/order-item/order-item.component.html
+++ b/src/app/features/orders/shared/order-item/order-item.component.html
@@ -7,7 +7,12 @@
        <img [src]="'assets/images/'+personImage"   alt="customer image" width="40px;" height="40px" class="rounded rounded-circle ">
   </span>
   <div class="d-flex flex-column  justify-content-center">
-   <span class="pb-1">{{order.customer.name || 'unknown' |titlecase}}</span>
+   <!-- <span class="pb-1">{{(isRtl()?order.customer.nameAr:order.customer.name) || 'unknown' |translate |titlecase}}</span> -->
+    <span class="pb-1">
+      {{
+       ( customerName || 'unknown') |translate |titlecase
+      }}
+    </span>
    <div class="d-flex align-items-center">
      <span class="pe-2 fs-verySmall text-secondary">#{{order.code}}</span>
      <span class="small d-flex align-items-center  text-secondary">
@@ -21,7 +26,7 @@
           }"
           aria-hidden="true">
         </i>
-        <span class="fs-verySmall">{{ order.status }}</span>
+        <span class="fs-verySmall">{{ order.status | translate }}</span>
       </span>
    </div>
   </div>
@@ -31,11 +36,11 @@
        <div class="row ">
       <div class="col-12 col-lg-6 text-end text-lg-center">
         <span class="small">
-          {{order.grossTotal}} {{currency}}
+          {{order.grossTotal}} {{currency | translate}}
         </span>
       </div>
       <div class="col-12 col-lg-6 text-end text-lg-center">
-        <span class="fs-verySmall text-secondary">since {{timeDifference.value}} {{timeDifference.unit}}</span>
+        <span class="fs-verySmall text-secondary">{{'since' | translate}} {{timeDifference.value}} {{timeDifference.unit | translate}}</span>
       </div>
     </div>
     </div>
