--- a/src/app/shared/components/page-controls/page-controls.component.html
+++ b/src/app/shared/components/page-controls/page-controls.component.html
@@ -1,6 +1,6 @@
 <div class="controls d-flex  justify-content-between align-items-center">
         <div class="d-flex align-items-center">
-            <span class="me-2" *ngIf="type != 'product'">All</span>
+            <span class="me-2" *ngIf="type != 'product'">{{'All' | translate}}</span>
             <span (click)="AddNew()"><i class="fa-solid fa-plus"></i></span>
         </div>
         <div class="d-flex align-items-center">
