--- a/src/app/shared/components/quantity-control/quantity-control.component.scss
+++ b/src/app/shared/components/quantity-control/quantity-control.component.scss
@@ -13,13 +13,20 @@
             font-size: 16px;
             cursor: pointer;
             color: white;
-            border-radius: 0 6px 6px 0;
+            border-start-end-radius: 6px;
+            border-end-end-radius: 6px;
+              border-start-start-radius: 0px;
+            border-end-start-radius: 0px;
         }
 
 .decrease {
             background-color: $dark;
             color:#f1f1f1;
-            border-radius: 6px 0 0 6px;
+            // border-radius: 6px 0 0 6px;
+            border-start-start-radius: 6px;
+            border-end-start-radius: 6px;
+              border-start-end-radius: 0px;
+            border-end-end-radius: 0px;
         }
 
 .increase {
