--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,13 @@
 @use 'variables' as *;
 
 html {
+    &[dir='rtl']{
+        .arrowIcon{
+            transform: rotate(180deg) !important;
+      }
+
+    }
+
   font-size: 16px;
   body{
   font-family: 'Poppins', sans-serif;
@@ -64,7 +71,7 @@ html {
   background-clip: content-box;
 }
  input {
-  padding-left: 2rem !important;
+  padding-inline-start: 2rem !important;
   font-size: .7rem !important;
   &::placeholder{
     font-size: .7rem;
@@ -119,7 +126,8 @@ html {
 
  .closeIcon{
   position: absolute;
-  left:10px;
+  // left:10px;
+  inset-inline-start: 10px;
   top:10px;
  }
   .summary,.payment{
