implement client info
refactor order-item to use it

--- a/src/app/features/orders/shared/order-item/order-item.component.html
+++ b/src/app/features/orders/shared/order-item/order-item.component.html
@@ -1,36 +1,23 @@
 <div class="container-fluid">
-  <div class="row align-items-center" (click)="showOrder(order.code)">
+  <div class="d-flex align-items-center">
+     <app-input-checkbox  [value]="order.code" [id]="order.code" (checked)="getOrderCode($event)"></app-input-checkbox>
+  <div class="row align-items-center flex-grow-1" (click)="showOrder(order.id)">
     <div class="col-8 col-md-6 col-lg-8 col-xl-9 col-xxl-9 text-start">
-  <div class="d-flex align-items-center flex-grow-1">
-  <app-input-checkbox  [value]="order.code" [id]="order.code" (checked)="getOrderCode($event)"></app-input-checkbox>
-  <span class="px-3">
-       <img [src]="'assets/images/'+personImage"   alt="customer image" width="40px;" height="40px" class="rounded rounded-circle ">
-  </span>
-  <div class="d-flex flex-column  justify-content-center">
-   <!-- <span class="pb-1">{{(isRtl()?order.customer.nameAr:order.customer.name) || 'unknown' |translate |titlecase}}</span> -->
-    <span class="pb-1">
-      {{
-       ( customerName || 'unknown') |translate |titlecase
-      }}
-    </span>
-   <div class="d-flex align-items-center">
-     <span class="pe-2 fs-verySmall text-secondary">#{{order.code}}</span>
-     <span class="small d-flex align-items-center  text-secondary">
-       <i
-          class="fa fa-circle fs-xxs pe-1"
-          [ngClass]="{
-            'text-warning': order.status === 'hold',
-            'text-semi-dark': order.status === 'paid',
-             'text-danger': order.status === 'cancalled',
-            'text-info': order.status === 'processing'
-          }"
-          aria-hidden="true">
-        </i>
-        <span class="fs-verySmall">{{ order.status | translate }}</span>
-      </span>
-   </div>
-  </div>
-  </div>
+       <app-client-info [order]=order [additionalInfo]="order.code" [flexGrow]="true" (checkedItemCode)="getOrderCode($event)">
+          <span class="small d-flex align-items-center  text-secondary">
+        <i
+            class="fa fa-circle fs-xxs pe-1"
+            [ngClass]="{
+              'text-warning': order.status === 'hold',
+              'text-semi-dark': order.status === 'paid',
+              'text-danger': order.status === 'cancalled',
+              'text-info': order.status === 'processing'
+            }"
+            aria-hidden="true">
+          </i>
+          <span class="fs-verySmall">{{ order.status | translate }}</span>
+          </span>
+     </app-client-info>
     </div>
     <div class="col-4 col-md-6 col-lg-4 col-xl-3  col-xxl-3">
        <div class="row ">
@@ -44,5 +31,6 @@
       </div>
     </div>
     </div>
+  </div>
   </div>
 </div>
