--- a/src/app/features/orders/shared/order-products/order-products.component.html
+++ b/src/app/features/orders/shared/order-products/order-products.component.html
@@ -34,7 +34,7 @@
   <tbody *ngIf="products().length > 0; else noProducts">
   <ng-container *ngFor="let product of products() ; let index=index;">
     <tr>
-      <td colspan="4">{{ product.name | titlecase }}</td>
+      <td colspan="4">{{ getOrderName(product) | titlecase }}</td>
     </tr>
     <tr>
       <td scope="row">{{ product.price }}  {{currency | translate}}</td>
